--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@getflywheel/local",
-	"version": "5.3.1+2",
+	"version": "5.3.2-beta",
 	"dependencies": {
 		"@types/electron": "^1.6.10",
 		"@types/node": "^12.7.12",
