--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@getflywheel/local",
-	"version": "5.4.0-beta",
+	"version": "5.4.1",
 	"dependencies": {
 		"@types/electron": "^1.6.10",
 		"@types/node": "^12.7.12",
