--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
 	"name": "@getflywheel/local",
-	"version": "5.6.4",
+	"version": "5.6.6",
 	"dependencies": {
-		"@types/electron": "^1.6.10",
+		"electron": "7.3.2",
 		"@types/node": "^12.7.12",
 		"@types/react": "^16.9.5",
 		"awilix": "^4.2.5",
