--- a/package.json
+++ b/package.json
@@ -1,17 +1,21 @@
 {
 	"name": "@getflywheel/local",
-	"version": "5.9.0",
+	"version": "5.9.4",
 	"dependencies": {
-		"electron": "7.3.2",
 		"@types/node": "^12.7.12",
-		"@types/react": "^16.9.5",
 		"awilix": "^4.2.5",
+		"electron": "9.3.1",
+		"graphql": "^15.4.0",
+		"graphql-subscriptions": "^1.1.0",
+		"graphql-tools": "^4.0.1",
+		"react": "^16.13.1",
 		"winston": "^3.2.1"
 	},
 	"files": [
 		"index.d.ts",
 		"renderer.d.ts",
 		"main.d.ts",
+		"graphql.d.ts",
 		"README.md"
 	],
 	"scripts": {
