--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
 	"name": "@getflywheel/local",
-	"version": "6.1.5",
+	"version": "6.1.7",
 	"dependencies": {
-		"@types/node": "^12.7.12",
+		"@types/node": "^14.14.35",
+		"apollo-boost": "^0.1.21",
 		"awilix": "^4.2.5",
+		"cross-fetch": "^3.0.6",
 		"electron": "^12.2.1",
 		"graphql": "^15.4.0",
 		"graphql-subscriptions": "^1.1.0",
