--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
 	"name": "@getflywheel/local",
-	"version": "6.2.0",
+	"version": "6.4.1",
 	"dependencies": {
 		"@types/node": "^14.14.35",
 		"apollo-boost": "^0.1.21",
 		"awilix": "^4.2.5",
-		"cross-fetch": "^3.0.6",
-		"electron": "^12.2.1",
+		"cross-fetch": "^3.1.5",
+		"electron": "^13.6.6",
 		"graphql": "^15.4.0",
 		"graphql-subscriptions": "^1.1.0",
 		"graphql-tag": "^2.11.0",
@@ -26,7 +26,7 @@
 	},
 	"types": "types.d.ts",
 	"devDependencies": {
-		"typedoc": "^0.17.4",
+		"typedoc": "0.22.15",
 		"typescript": "^3.8.3"
 	}
 }
