--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
 	"name": "@getflywheel/local",
-	"version": "7.2.1",
+	"version": "8.0.0",
 	"dependencies": {
-		"@types/node": "^14.14.35",
+		"@types/node": "^18.15.0",
 		"apollo-boost": "^0.1.21",
 		"awilix": "^4.2.5",
 		"cross-fetch": "^3.1.5",
-		"electron": "^21.0.1",
+		"electron": "25.8.1",
 		"graphql": "^15.4.0",
 		"graphql-subscriptions": "^1.1.0",
 		"graphql-tag": "^2.11.0",
